@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-07-08T08:40:30Z",
+  "timestamp" : "2022-07-08T16:37:36Z",
   "count_outdated" : 652,
   "uniques_outdated" : 338,
   "count" : 686,
-  "uniques" : 357,
+  "uniques" : 356,
   "clones" : [
     {
       "timestamp": "2022-06-24T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
